diesel_compile_tests/tests/compile-fail/table_invalid_syntax_2.rs
#[macro_use] extern crate diesel;

table! {
     some wrong syntax
}
// error-pattern: Invalid `table!` syntax. Please see the `table!` macro docs for more info. `https://docs.diesel.rs/diesel/macro.table.html`

fn main() {}
